# Auto-Bug-Patcher

./: .gitignore  README.md  config.yaml  docker-compose.dev.yml  docker-compose.yml  implementation2_plan  implementation_plan.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep
backend/app/: main.py
backend/app/agents/: __init__.py  build_agent.py  consistency_checker.py  decision_engine.py  environment_agent.py  environment_validator_agent.py  evidence_registry.py  git_agent.py  graph.py  issue_agent.py  localization_agent.py  patch_agent.py  performance_agent.py  planner_agent.py  pr_agent.py  report_agent.py  repository_agent.py  reproduction_agent.py  retrieval_agent.py  reviewer_agent.py  risk_agent.py  root_cause_agent.py  schemas.py  state.py  static_analysis_agent.py  test_generator_agent.py  test_runner_agent.py  test_validator_agent.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  config.py  issues.py  patches.py  repositories.py  search.py
backend/app/core/: celery_app.py  confidence.py  config.py  database.py  security.py
backend/app/models/: __init__.py  issue.py  job.py  patch.py  pull_request.py  repository.py  user.py
backend/app/rag/: __init__.py  ast_parser.py  indexer.py  retriever.py
backend/app/schemas/: __init__.py  issue.py  job.py  patch.py  repository.py
backend/app/services/: __init__.py  github_service.py  job_service.py  report_service.py
frontend/: Dockerfile  Dockerfile.dev  next.config.mjs  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/issues/[id]/: page.tsx
frontend/src/app/issues/[id]/report/: page.tsx
frontend/src/app/issues/new/: page.tsx
frontend/src/app/repositories/: page.tsx
frontend/src/app/repositories/[id]/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: AgentTimeline.tsx  CodeSearchBar.tsx  DiffViewer.tsx  IssueForm.tsx  LiveLogs.tsx  Navbar.tsx  RepoCard.tsx  StatsCard.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/lib/: api.ts  sse.ts
frontend/src/types/: index.ts
