[project]
name = "autobug-backend"
version = "1.0.0"
description = "AutoBug AI — Autonomous bug detection, root cause analysis, and code fix generation"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # ── Web framework ──────────────────────────────────────────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",

    # ── Database ───────────────────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",

    # ── Task queue ─────────────────────────────────────────────────────────
    "celery[redis]>=5.4.0",
    "redis>=5.0.4",
    "flower>=2.0.1",

    # ── LangGraph / LangChain ──────────────────────────────────────────────
    "langgraph>=0.1.5",
    "langchain>=0.2.3",
    "langchain-core>=0.2.5",
    "langchain-community>=0.2.3",
    "langchain-openai>=0.1.8",
    "langchain-anthropic>=0.1.13",
    "langchain-mistralai>=0.1.7",
    "langchain-google-genai>=1.0.5",

    # ── Vector database ────────────────────────────────────────────────────
    "qdrant-client>=1.9.1",

    # ── Git ────────────────────────────────────────────────────────────────
    "gitpython>=3.1.43",

    # ── Docker sandbox ─────────────────────────────────────────────────────
    "docker>=7.1.0",

    # ── GitHub API ─────────────────────────────────────────────────────────
    "PyGithub>=2.3.0",

    # ── HTTP ───────────────────────────────────────────────────────────────
    "httpx>=0.27.0",

    # ── Auth ───────────────────────────────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",

    # ── Config ─────────────────────────────────────────────────────────────
    "pyyaml>=6.0.1",

    # ── Embeddings (local fallback) ────────────────────────────────────────
    "sentence-transformers>=2.7.0",

    # ── Reports ────────────────────────────────────────────────────────────
    "markdown>=3.6",

    # ── Monitoring ─────────────────────────────────────────────────────────
    "sentry-sdk[fastapi]>=2.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
treesitter = [
    # Optional: multi-language AST parsing (requires compiled grammars)
    "tree-sitter>=0.22.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
